--- a/components/switch.html
+++ b/components/switch.html
@@ -61,7 +61,7 @@
     <link rel="shortcut icon" href="../gitbook/images/favicon.ico" type="image/x-icon">
 
     
-    <link rel="next" href="unveil.md" />
+    <link rel="next" href="unveil.html" />
     
     
     <link rel="prev" href="slider.html" />
@@ -743,9 +743,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.9.11" data-path="unveil.md">
+        <li class="chapter " data-level="1.4.9.11" data-path="unveil.html">
             
-                <span>
+                <a href="unveil.html">
             
                     
                     Unveil
@@ -1391,7 +1391,7 @@
                 </a>
                 
                 
-                <a href="unveil.md" class="navigation navigation-next " aria-label="Next page: Unveil">
+                <a href="unveil.html" class="navigation navigation-next " aria-label="Next page: Unveil">
                     <i class="fa fa-angle-right"></i>
                 </a>
                 
@@ -1402,7 +1402,7 @@
     <script>
         var gitbook = gitbook || [];
         gitbook.push(function() {
-            gitbook.page.hasChanged({"page":{"title":"Switch","level":"1.4.9.10","depth":3,"next":{"title":"Unveil","level":"1.4.9.11","depth":3,"path":"components/unveil.md","ref":"components/unveil.md","articles":[]},"previous":{"title":"Slider","level":"1.4.9.9","depth":3,"path":"components/slider.md","ref":"components/slider.md","articles":[]},"dir":"ltr"},"config":{"plugins":["expandable-chapters","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":2},"expandable-chapters":{},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/switch.md","mtime":"2018-10-08T01:19:58.766Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2018-10-08T01:20:52.730Z"},"basePath":"..","book":{"language":""}});
+            gitbook.page.hasChanged({"page":{"title":"Switch","level":"1.4.9.10","depth":3,"next":{"title":"Unveil","level":"1.4.9.11","depth":3,"path":"components/unveil.md","ref":"components/unveil.md","articles":[]},"previous":{"title":"Slider","level":"1.4.9.9","depth":3,"path":"components/slider.md","ref":"components/slider.md","articles":[]},"dir":"ltr"},"config":{"plugins":["expandable-chapters","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":2},"expandable-chapters":{},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/switch.md","mtime":"2018-10-08T01:25:42.108Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2018-10-08T01:25:47.314Z"},"basePath":"..","book":{"language":""}});
         });
     </script>
 </div>
