--- a/components/text.html
+++ b/components/text.html
@@ -743,9 +743,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.9.11" data-path="unveil.md">
+        <li class="chapter " data-level="1.4.9.11" data-path="unveil.html">
             
-                <span>
+                <a href="unveil.html">
             
                     
                     Unveil
@@ -1343,11 +1343,17 @@
                                 <section class="normal markdown-section">
                                 
                                 <h1 id="text">Text</h1>
-<p>By default, only Markdown at the top-level will be processed. In case you wish to use Markdown syntax inside a component attribute or nested inside HTML tags, you have to wrap it inside this component. The component expects no other child elements besides text.</p>
-<h3 id="example">Example:</h3>
+<p>Text component, which allows rendering of raw text as Markdown and enables voice control.</p>
+<h4 id="example">Example:</h4>
 <pre class="language-"><code class="lang-js"><span class="token operator">&lt;</span>Text<span class="token operator">&gt;</span><span class="token operator">*</span>Markdown<span class="token operator">*</span> formatted text comes here<span class="token operator">...</span><span class="token operator">&lt;</span><span class="token operator">/</span>Text<span class="token operator">&gt;</span>
 </code></pre>
-<p><a href="http://isle.heinz.cmu.edu/components/text-input/" target="_blank">Open Formatting Guide</a></p>
+<p><a href="https://isle.heinz.cmu.edu/components/text/" target="_blank">Open interactive preview</a></p>
+<h4 id="options">Options:</h4>
+<ul>
+<li><strong>raw</strong> | <code>string</code>: text to be rendered. Default: <code>&apos;&apos;</code>.</li>
+<li><strong>style</strong> | <code>object</code>: CSS inline styles. Default: <code>{}</code>.</li>
+<li><strong>voiceID</strong> | <code>string</code>: voice control identifier. Default: <code>none</code>.</li>
+</ul>
 
                                 
                                 </section>
@@ -1391,7 +1397,7 @@
     <script>
         var gitbook = gitbook || [];
         gitbook.push(function() {
-            gitbook.page.hasChanged({"page":{"title":"Text","level":"1.4.12.10","depth":3,"next":{"title":"News","level":"1.4.12.11","depth":3,"path":"components/news.md","ref":"components/news.md","articles":[]},"previous":{"title":"RealTimeMetrics","level":"1.4.12.9","depth":3,"path":"components/realtime-metrics.md","ref":"components/realtime-metrics.md","articles":[]},"dir":"ltr"},"config":{"plugins":["expandable-chapters","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":2},"expandable-chapters":{},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/text.md","mtime":"2018-10-08T01:19:58.766Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2018-10-08T01:20:52.730Z"},"basePath":"..","book":{"language":""}});
+            gitbook.page.hasChanged({"page":{"title":"Text","level":"1.4.12.10","depth":3,"next":{"title":"News","level":"1.4.12.11","depth":3,"path":"components/news.md","ref":"components/news.md","articles":[]},"previous":{"title":"RealTimeMetrics","level":"1.4.12.9","depth":3,"path":"components/realtime-metrics.md","ref":"components/realtime-metrics.md","articles":[]},"dir":"ltr"},"config":{"plugins":["expandable-chapters","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":2},"expandable-chapters":{},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/text.md","mtime":"2018-10-08T01:25:42.112Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2018-10-08T01:25:47.314Z"},"basePath":"..","book":{"language":""}});
         });
     </script>
 </div>
