--- a/components/draggable-list.html
+++ b/components/draggable-list.html
@@ -61,10 +61,10 @@
     <link rel="shortcut icon" href="../gitbook/images/favicon.ico" type="image/x-icon">
 
     
-    <link rel="next" href="enlargeable-grid.html" />
+    <link rel="next" href="expire.html" />
     
     
-    <link rel="prev" href="draggable-grid.html" />
+    <link rel="prev" href="../chapters/display.html" />
     
 
     </head>
@@ -710,20 +710,7 @@
             <ul class="articles">
                 
     
-        <li class="chapter " data-level="1.4.11.1" data-path="draggable-grid.html">
-            
-                <a href="draggable-grid.html">
-            
-                    
-                    Draggable Grid
-            
-                </a>
-            
-
-            
-        </li>
-    
-        <li class="chapter active" data-level="1.4.11.2" data-path="draggable-list.html">
+        <li class="chapter active" data-level="1.4.11.1" data-path="draggable-list.html">
             
                 <a href="draggable-list.html">
             
@@ -736,20 +723,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.11.3" data-path="enlargeable-grid.html">
-            
-                <a href="enlargeable-grid.html">
-            
-                    
-                    Enlargeable Grid
-            
-                </a>
-            
-
-            
-        </li>
-    
-        <li class="chapter " data-level="1.4.11.4" data-path="expire.html">
+        <li class="chapter " data-level="1.4.11.2" data-path="expire.html">
             
                 <a href="expire.html">
             
@@ -762,7 +736,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.11.5" data-path="gate.html">
+        <li class="chapter " data-level="1.4.11.3" data-path="gate.html">
             
                 <a href="gate.html">
             
@@ -775,7 +749,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.11.6" data-path="grid.html">
+        <li class="chapter " data-level="1.4.11.4" data-path="grid.html">
             
                 <a href="grid.html">
             
@@ -788,7 +762,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.11.7" data-path="pages.html">
+        <li class="chapter " data-level="1.4.11.5" data-path="pages.html">
             
                 <a href="pages.html">
             
@@ -801,7 +775,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.11.8" data-path="revealer.html">
+        <li class="chapter " data-level="1.4.11.6" data-path="revealer.html">
             
                 <a href="revealer.html">
             
@@ -814,7 +788,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.11.9" data-path="slider.html">
+        <li class="chapter " data-level="1.4.11.7" data-path="slider.html">
             
                 <a href="slider.html">
             
@@ -827,7 +801,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.11.10" data-path="switch.html">
+        <li class="chapter " data-level="1.4.11.8" data-path="switch.html">
             
                 <a href="switch.html">
             
@@ -840,7 +814,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.11.11" data-path="unveil.html">
+        <li class="chapter " data-level="1.4.11.9" data-path="unveil.html">
             
                 <a href="unveil.html">
             
@@ -1395,12 +1369,12 @@
 
             
                 
-                <a href="draggable-grid.html" class="navigation navigation-prev " aria-label="Previous page: Draggable Grid">
+                <a href="../chapters/display.html" class="navigation navigation-prev " aria-label="Previous page: Display">
                     <i class="fa fa-angle-left"></i>
                 </a>
                 
                 
-                <a href="enlargeable-grid.html" class="navigation navigation-next " aria-label="Next page: Enlargeable Grid">
+                <a href="expire.html" class="navigation navigation-next " aria-label="Next page: Expire">
                     <i class="fa fa-angle-right"></i>
                 </a>
                 
@@ -1411,7 +1385,7 @@
     <script>
         var gitbook = gitbook || [];
         gitbook.push(function() {
-            gitbook.page.hasChanged({"page":{"title":"Draggable List","level":"1.4.11.2","depth":3,"next":{"title":"Enlargeable Grid","level":"1.4.11.3","depth":3,"path":"components/enlargeable-grid.md","ref":"components/enlargeable-grid.md","articles":[]},"previous":{"title":"Draggable Grid","level":"1.4.11.1","depth":3,"path":"components/draggable-grid.md","ref":"components/draggable-grid.md","articles":[]},"dir":"ltr"},"config":{"plugins":["expandable-chapters","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":2},"expandable-chapters":{},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/draggable-list.md","mtime":"2018-10-08T06:49:58.331Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2018-10-08T06:50:39.211Z"},"basePath":"..","book":{"language":""}});
+            gitbook.page.hasChanged({"page":{"title":"Draggable List","level":"1.4.11.1","depth":3,"next":{"title":"Expire","level":"1.4.11.2","depth":3,"path":"components/expire.md","ref":"components/expire.md","articles":[]},"previous":{"title":"Display","level":"1.4.11","depth":2,"path":"chapters/display.md","ref":"chapters/display.md","articles":[{"title":"Draggable List","level":"1.4.11.1","depth":3,"path":"components/draggable-list.md","ref":"components/draggable-list.md","articles":[]},{"title":"Expire","level":"1.4.11.2","depth":3,"path":"components/expire.md","ref":"components/expire.md","articles":[]},{"title":"Gate","level":"1.4.11.3","depth":3,"path":"components/gate.md","ref":"components/gate.md","articles":[]},{"title":"Grid","level":"1.4.11.4","depth":3,"path":"components/grid.md","ref":"components/grid.md","articles":[]},{"title":"Pages","level":"1.4.11.5","depth":3,"path":"components/pages.md","ref":"components/pages.md","articles":[]},{"title":"Revealer","level":"1.4.11.6","depth":3,"path":"components/revealer.md","ref":"components/revealer.md","articles":[]},{"title":"Slider","level":"1.4.11.7","depth":3,"path":"components/slider.md","ref":"components/slider.md","articles":[]},{"title":"Switch","level":"1.4.11.8","depth":3,"path":"components/switch.md","ref":"components/switch.md","articles":[]},{"title":"Unveil","level":"1.4.11.9","depth":3,"path":"components/unveil.md","ref":"components/unveil.md","articles":[]}]},"dir":"ltr"},"config":{"plugins":["expandable-chapters","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":2},"expandable-chapters":{},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/draggable-list.md","mtime":"2018-10-08T06:49:58.331Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2018-10-08T07:00:56.117Z"},"basePath":"..","book":{"language":""}});
         });
     </script>
 </div>
