--- a/app/components/js-shell/js-shell.css
+++ b/app/components/js-shell/js-shell.css
@@ -5,6 +5,7 @@
 	margin-left: 0%;
 	font-family: monospace;
 	font-size: 18px;
+	text-align: left;
 	background: ivory;
 	margin-bottom: 20px;
 	border: 1px solid  rgba(92,92,92, 0.6);
