Position search bar

--- a/app/editor-components/editor/editor.css
+++ b/app/editor-components/editor/editor.css
@@ -90,3 +90,10 @@
 	content: attr(data-count);
 	display: block;
 }
+
+.ace_search.right {
+	top: 10px;
+	left: 175px;
+	position: fixed;
+	width: 400px;
+}
