--- a/app/components/js-shell/js-shell.css
+++ b/app/components/js-shell/js-shell.css
@@ -1,4 +1,4 @@
-.JSShell {
+.js-shell {
 	position: relative;
 	width: 99.9%;
 	height: auto;
@@ -13,7 +13,7 @@
 	box-shadow: 0 0 8px rgba(92,92,92, 0.5);
 }
 
-.jsedit {
+.js-shell-edit {
 	width: 98%;
 	margin-top: 1%;
 	margin-left: 1%;
@@ -24,7 +24,7 @@
 	margin-bottom: 10px;
 }
 
-.reset {
+.js-shell-reset {
 	position: absolute;
 	font-family: monospace;
 	right: 34px;
@@ -37,7 +37,7 @@
 	z-index: 2;
 }
 
-.console {
+.js-shell-console {
 	position: relative;
 	width: 98%;
 	height: 160px;
@@ -50,12 +50,13 @@
 	overflow-y: scroll;
 }
 
-.console p {
-	margin: 0 0 0px;
+.js-shell-console-output {
+	padding-left: 0.2em;
+	padding-right: 0.2em;
 }
 
-.toolbar {
+.js-shell-toolbar {
 	margin-left: 1%;
-	width: 96%;
+	margin-right: 1%;
 	margin-bottom: 10px;
 }
