Add and use solution button

--- a/app/components/multiple-choice-matrix/multiple_choice_matrix.css
+++ b/app/components/multiple-choice-matrix/multiple_choice_matrix.css
@@ -6,3 +6,11 @@
 	margin-top: 8px;
 	max-width: 900px;
 }
+
+.multiple-choice-matrix-controls {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	padding-left: 10px;
+	padding-right: 10px;
+}
