Updated lesson CSS to get conditional container width by common screen resolutions

--- a/app/css/lesson.css
+++ b/app/css/lesson.css
@@ -315,3 +315,22 @@ label {
 	font-stretch: extra-expanded;
 	color: #2e4468;
 }
+
+@media (min-width: 1200px) {
+	.container {
+		max-width: 1140px;
+	}
+}
+
+@media (min-width: 1920px) {
+	.container {
+		max-width: 1824px;
+	}
+}
+
+@media (min-width: 2560px) {
+	.container {
+		max-width: 2432px;
+	}
+}
+
