Change background color on hover

--- a/app/components/statusbar/chat/chat.css
+++ b/app/components/statusbar/chat/chat.css
@@ -97,6 +97,10 @@
 	background-color: ghostwhite;
 }
 
+.chat-textarea:hover:not(:focus) {
+	background-color: #f3f2f3;
+}
+
 .chatexit:hover {
 	background: lightcoral;
 }
