Allow shuffling of only one column of a match list question

--- a/app/components/match-list-question/match_list_question.css
+++ b/app/components/match-list-question/match_list_question.css
@@ -17,6 +17,7 @@
 	font-weight: 500;
 	color: #2e4468;
 	text-shadow: 0 0 0.1px rgba(92,92,92,0.5);
+	margin-bottom: 6px;
 }
 
 .match-list-question-lists {
