--- a/app/components/statusbar/statusbar.css
+++ b/app/components/statusbar/statusbar.css
@@ -101,3 +101,11 @@
 	border-radius: 50%;
 	box-shadow: 1px 1px 2px grey;
 }
+
+#Lesson .statusbar-calc-icon {
+	opacity: 0.4;
+}
+
+#Lesson .statusbar-calc-icon:hover {
+	opacity: 1.0;
+}
