--- a/app/css/lesson.css
+++ b/app/css/lesson.css
@@ -46,6 +46,12 @@ pre {
 	width: 100%;
 	height: 100%;
 	display: block;
+	overflow-x: hidden;
+	overflow-y: hidden;
+}
+
+.focus-glow {
+	box-shadow: 0px 0px 15px 5px gold !important;
 }
 
 .nav-tabs .nav-item {
