--- a/app/components/calculator/calculator.css
+++ b/app/components/calculator/calculator.css
@@ -3,6 +3,14 @@
 	z-index: 1002;
 }
 
+.calc-hide-button {
+	float: right;
+}
+
+.calc-hide-button:hover {
+	color: rgba( 220, 53, 69, 0.6 );
+}
+
 #calc-panel {
 	background: rgba(240,240,240,0.9);
 	width: 50%;
