--- a/app/components/statusbar/instructor-view/user_list.css
+++ b/app/components/statusbar/instructor-view/user_list.css
@@ -12,3 +12,22 @@
 .user-list-item:hover {
 	background: #d39e00 !important;
 }
+
+#duplicated-elem {
+	position: fixed;
+	top: 20px;
+	left: 20px;
+	z-index: 3000;
+}
+
+#duplicated-container {
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	background-color: rgba(0,0,0,0.5);
+	z-index: 2;
+}
