--- a/app/components/feedback/feedback.css
+++ b/app/components/feedback/feedback.css
@@ -1,11 +1,11 @@
-.icon {
+.feedback-icon {
 	height: 32px;
 	width: 32px;
 	box-shadow: none;
 	transform: scale(1.1);
 }
 
-.icon:hover {
+.feedback-icon:hover {
 	opacity: 1;
 	outline: none;
 }
