--- a/app/components/statusbar/statusbar.css
+++ b/app/components/statusbar/statusbar.css
@@ -11,9 +11,33 @@
 	right: 0;
 	margin: auto;
 	z-index: 1003;
-	opacity: 0.7;
+	opacity: 0.78;
 	cursor: pointer;
+	transition: opacity .4s ease-in-out;
 }
+
+#Lesson .statusbar:hover {
+	opacity: 1;
+}
+
+#Lesson .statusbar-upper {
+	position: absolute;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 32px;
+	background: purple;
+	z-index: 2;
+}
+
+#Lesson .statusbar-smooth {
+	background-color: rgb(232, 232, 232);
+}
+
+#Lesson .statusbar-smooth {
+	background-color: purple;
+}
+
 
 #Lesson .statusbar-left {
 	position: absolute;
@@ -24,6 +48,8 @@
 	transform: skewX(45deg);
 	border-left: solid 1px darkgrey;
 	border-bottom: solid 1px darkgrey;
+	overflow: hidden;
+	border-bottom-left-radius: 20px; 
 }
 
 #Lesson .statusbar-middle {
@@ -45,15 +71,19 @@
 	transform: skewX(-45deg);
 	border-bottom: solid 1px darkgrey;
 	border-right: solid 1px darkgrey;
+
+	border-bottom-right-radius: 20px; 
 }
 
 #Lesson .statusbar-text {
+	color: #2e4468;
 	bottom: -1px;
 	height: auto;
 	position: absolute;
 	right: 20px;
 	font-size: 12px;
-	font-family: Open Sans;
+	font-family: Open Sans Condensed;
+	font-weight: 700;
 	z-index: 2;
 }
 
@@ -88,9 +118,24 @@
 	height: auto;
 	margin-left: 35%;
 	position: absolute;
-	font-size: 12px;
+	font-size: 14px;
 	font-family: Open Sans;
+	font-variant-caps: all-petite-caps;
 }
+
+
+
+
+
+@-webkit-keyframes turn {
+    from{
+        -webkit-transform: rotate(0deg);
+    }
+    to{
+        -webkit-transform: rotate(360deg);
+    }
+}
+
 
 #Lesson .statusbar-presence {
 	width: 10px;
@@ -98,8 +143,25 @@
 	height: 10px;
 	bottom: 3px;
 	position: absolute;
+
 	border-radius: 50%;
-	box-shadow: 1px 1px 2px grey;
+    border:solid 1px black;
+	z-index: 2;
+	
+}
+
+#Lesson .statusbar-inner-presence {
+	position: absolute;
+	top: -3px;
+	left: -3px;
+	width: 14px;
+	height: 14px;
+	border-left:solid 1px darkslategray;
+	border-radius: 50%;
+	z-index: 1;
+	-webkit-animation: turn 5s linear infinite;
+	-webkit-animation-duration: 2s;
+
 }
 
 #Lesson .statusbar-calc-icon {
